[gd_scene load_steps=16 format=3 uid="uid://ylpkw2lvllxq"]

[ext_resource type="Script" uid="uid://csfqyurb2ywfh" path="res://actors/scripts/grinder_beacon.gd" id="1_pg7tx"]
[ext_resource type="ArrayMesh" uid="uid://d0k40pyircjhn" path="res://Assets/meshes/beacon/Becon_Roundcube.res" id="2_ft08n"]
[ext_resource type="Script" uid="uid://bi2ox86m0yg1y" path="res://scripts/components/hookable_component.gd" id="3_cijt5"]
[ext_resource type="Script" uid="uid://dtpuy1iftshns" path="res://scripts/meterial_overlayer.gd" id="4_t7nde"]
[ext_resource type="Shader" uid="uid://71ff4h8ongb8" path="res://shaders/inverted-hull-stencil-read-2.gdshader" id="5_d186k"]
[ext_resource type="Script" uid="uid://b6pqa311a7k0c" path="res://scripts/components/mouse_over_component.gd" id="6_gihkd"]
[ext_resource type="AudioStream" uid="uid://cjkmlgrt2f54u" path="res://sounds/rcs-thrusters/rcs-thruster-loop-non-muffled.ogg" id="7_be41w"]
[ext_resource type="PackedScene" uid="uid://7k7ri26qwqvt" path="res://effects/rcs_thruster_effect.tscn" id="7_v4nea"]
[ext_resource type="Script" uid="uid://banct1fm1y4u0" path="res://scripts/components/decelerator_component.gd" id="7_v27bq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mobjs"]
radius = 7.0

[sub_resource type="SphereShape3D" id="SphereShape3D_68v8x"]
radius = 1.4

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mobjs"]
load_path = "res://.godot/imported/Icosphere_Ucupaint Icosphere_1.png-0d2f37c1b665f0e5b7b9995a1e66fd29.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hnl3e"]
render_priority = 2
shader = ExtResource("5_d186k")
shader_parameter/outline_size = 1.5
shader_parameter/outline_color = Color(1.353256, 1.1739426, 0.5256553, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_68v8x"]
load_path = "res://.godot/imported/Icosphere_Ucupaint Icosphere_1.png-0d2f37c1b665f0e5b7b9995a1e66fd29.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kyuk2"]
resource_name = "Icosphere"
next_pass = SubResource("ShaderMaterial_hnl3e")
transparency = 1
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0)
metallic_texture = SubResource("CompressedTexture2D_mobjs")
metallic_texture_channel = 2
roughness_texture = SubResource("CompressedTexture2D_68v8x")
roughness_texture_channel = 1
rim_tint = 0.4
clearcoat_roughness = 0.7
backlight = Color(1, 1, 1, 1)
stencil_mode = 3
stencil_flags = 6
stencil_compare = 6
stencil_reference = 2

[node name="GrinderBeacon" type="RigidBody3D"]
collision_mask = 21
axis_lock_linear_y = true
mass = 500.0
script = ExtResource("1_pg7tx")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_mobjs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_68v8x")

[node name="Graphics" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_ft08n")

[node name="HookableComponent" type="Node" parent="."]
script = ExtResource("3_cijt5")
metadata/_custom_type_script = "uid://bi2ox86m0yg1y"

[node name="UnhookSelection" type="Node" parent="." node_paths=PackedStringArray("meshes")]
script = ExtResource("4_t7nde")
meshes = [NodePath("../Graphics")]
material_overlay = SubResource("StandardMaterial3D_kyuk2")
metadata/_custom_type_script = "uid://dtpuy1iftshns"

[node name="MouseOverComponent" type="Node" parent="."]
script = ExtResource("6_gihkd")
metadata/_custom_type_script = "uid://b6pqa311a7k0c"

[node name="DeceleratorComponent" type="Node" parent="." node_paths=PackedStringArray("deceleration_sounds", "deceleration_effects")]
script = ExtResource("7_v27bq")
stop_angular_amount = 0.0
deceleration_sounds = [NodePath("../RCSThrustLoop")]
deceleration_effects = [NodePath("../RCSThrusterEffect"), NodePath("../RCSThrusterEffect2"), NodePath("../RCSThrusterEffect3"), NodePath("../RCSThrusterEffect4")]
metadata/_custom_type_script = "uid://banct1fm1y4u0"

[node name="RCSThrustLoop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_be41w")
volume_db = -7.0
unit_size = 7.0
max_db = -2.0
pitch_scale = 0.65

[node name="RCSThrusterEffect" parent="." instance=ExtResource("7_v4nea")]
transform = Transform3D(0.70710677, 0, -0.70710677, 0, 1, 0, 0.70710677, 0, 0.70710677, -0.93, 0, 0.93)
amount = 60
lifetime = 0.1

[node name="RCSThrusterEffect2" parent="." instance=ExtResource("7_v4nea")]
transform = Transform3D(-0.7071067, 0, -0.7071067, 0, 1, 0, 0.7071067, 0, -0.7071067, -0.93, 0, -0.93)
amount = 60
lifetime = 0.1

[node name="RCSThrusterEffect3" parent="." instance=ExtResource("7_v4nea")]
transform = Transform3D(-0.70710677, 0, 0.70710665, 0, 1, 0, -0.70710665, 0, -0.70710677, 0.93, 0, -0.93)
amount = 60
lifetime = 0.1

[node name="RCSThrusterEffect4" parent="." instance=ExtResource("7_v4nea")]
transform = Transform3D(0.7071067, 0, 0.7071067, 0, 1, 0, -0.7071067, 0, 0.7071067, 0.93, 0, 0.93)
amount = 60
lifetime = 0.1

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
